force-app/main/default/objects/Earthquake__c/Earthquake__c.object-meta.xml
<CustomObject>
    <label>Earthquake</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Earthquake Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Earthquakes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>