force-app/main/default/objects/Earthquake__c/fields/Alert_Level__c.field-meta.xml
<CustomField>
    <fullName>Alert_Level__c</fullName>
    <label>Alert Level</label>
    <length>20</length>
    <type>Text</type>
</CustomField>