force-app/main/default/objects/Earthquake__c/fields/Depth__c.field-meta.xml
<CustomField>
    <fullName>Depth__c</fullName>
    <label>Depth</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>