force-app/main/default/objects/Earthquake__c/fields/Magnitude__c.field-meta.xml
<CustomField>
    <fullName>Magnitude__c</fullName>
    <label>Magnitude</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>