force-app/main/default/objects/Earthquake__c/fields/Place__c.field-meta.xml
<CustomField>
    <fullName>Place__c</fullName>
    <label>Place</label>
    <length>80</length>
    <type>Text</type>
</CustomField>