force-app/main/default/objects/Earthquake__c/fields/USGS_ID__c.field-meta.xml
<CustomField>
    <fullName>USGS_ID__c</fullName>
    <label>USGS ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>