force-app/main/default/objects/Earthquake__c/fields/USGS_Link__c.field-meta.xml
<CustomField>
    <fullName>USGS_Link__c</fullName>
    <label>USGS Link</label>
    <type>Url</type>
</CustomField>