force-app/main/default/objects/Earthquake__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>USGS_ID__c</columns>
    <columns>Magnitude__c</columns>
    <columns>Place__c</columns>
    <columns>Alert_Level__c</columns>
    <columns>Depth__c</columns>
    <columns>Geolocation__Latitude__s</columns>
    <columns>Geolocation__Longitude__s</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>